redesigned navigation and tweaked grid

--- a/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
@@ -38,10 +38,18 @@
 @concrete:      #95a5a6;
 @asbestos:      #7f8c8d;
 
+@stockholm:       #fcfffc;
+@deep-sea:        #2E2D33;
+@thulme:          #40E2E1;
+@startup-tools:   #90CC3A;
+@open-design:     #EBC434;
+@weiji:           #D13351;
+
+
 //
 // Main Colors
 // -------------------------
-@base:             @wet-asphalt;
+@base:             @deep-sea;
 @firm:             @turquoise;
 
 @gray:             @concrete;
@@ -53,8 +61,8 @@
 @warning:          @sun-flower;
 @info:             @peter-river;
 
-@link-color:       @asbestos;
-@link-hover-color: @midnight-blue;
+@link-color:       black;
+@link-hover-color: @deep-sea;
 
 // Typography
 // -------------------------
