implemented h&fj cloud fonts

--- a/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
@@ -66,9 +66,13 @@
 
 // Typography
 // -------------------------
-@base-font-family: "Lato", sans-serif;
+@base-font-family: 'Whitney SSm A', 'Whitney SSm B', sans-serif;
+@base-font-weight: 500;
 @base-font-size: 14px;
 @base-line-height: 1.231;
+
+@alt-font-family: 'Knockout 31 A', 'Knockout 31 B', sans-serif;
+@alt-font-weight: 400;
 
 // Headings
 @h1: @base-font-size * 4.429; /* 62px */
