--- a/wordpress/wp-content/themes/thulme/assets/less/flat-ui/modules/ui-datepicker.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/flat-ui/modules/ui-datepicker.less
@@ -28,7 +28,7 @@
     color: @inverse;
     text-align: center;
     cursor: pointer;
-    
+
     &:hover {
       background-color: mix(@firm, white, 80%);
     }
@@ -94,7 +94,7 @@
     min-width: 34px;
     height: 30px;
     text-align: center;
-    font-weight: bold;
+    font-weight: 600;
     border: 0;
     padding: 1px;
     vertical-align: middle;
@@ -116,7 +116,7 @@
     }
     a {
       .border-radius(@datepicker-border-radius);
-      
+
       &:hover {
         background-color: mix(@lightgray, white, 60%);
         color: @base;
@@ -199,8 +199,8 @@
   }
   .ui-datepicker-buttonpane {
     clear: left;
-  }  
-} 
+  }
+}
 .ui-datepicker-multi-2 .ui-datepicker-group {
   width: 50%;
 }
