--- a/wordpress/wp-content/themes/thulme/style.css
+++ b/wordpress/wp-content/themes/thulme/style.css
@@ -406,7 +406,8 @@ you can use the generic selector below, but it's slower:
 }
 body {
   color: #2e2d33;
-  font-family: "Lato", sans-serif;
+  font-family: 'Whitney SSm A', 'Whitney SSm B', sans-serif;
+  font-weight: 500;
   font-size: 14px;
   line-height: 1.231;
 }
@@ -414,7 +415,8 @@ input,
 button,
 select,
 textarea {
-  font-family: "Lato", sans-serif;
+  font-family: 'Whitney SSm A', 'Whitney SSm B', sans-serif;
+  font-weight: 500;
   font-size: 14px;
 }
 a {
@@ -429,6 +431,21 @@ a {
 a:hover {
   color: #2e2d33;
   text-decoration: none;
+}
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
+  font-family: 'Knockout 31 A', 'Knockout 31 B', sans-serif;
+  font-weight: 400;
 }
 h1,
 .h1 {
@@ -462,27 +479,15 @@ h6,
 .h6 {
   line-height: 1.2em;
 }
-h1 {
-  font-weight: 500;
-}
 h2 {
-  font-weight: 500;
   margin-bottom: 2px;
 }
 h3 {
-  font-weight: 500;
   margin-bottom: 4px;
   margin-top: 2px;
 }
 h4 {
-  font-weight: 500;
   margin-top: 4px;
-}
-h5 {
-  font-weight: 500;
-}
-h6 {
-  font-weight: 700;
 }
 p {
   font-size: 18.004px;
@@ -1233,7 +1238,7 @@ a.muted:focus {
 }
 .navbar-unread,
 .navbar-new {
-  font-family: "Lato", sans-serif;
+  font-family: 'Whitney SSm A', 'Whitney SSm B', sans-serif;
   background-color: #1abc9c;
   border-radius: 50%;
   color: #ffffff;
@@ -1400,7 +1405,7 @@ a.muted:focus {
   background-color: #ffffff;
   border: 2px solid transparent;
   color: #4d4d52;
-  font-family: "Lato", sans-serif;
+  font-family: 'Whitney SSm A', 'Whitney SSm B', sans-serif;
   font-size: 14.994px;
   /* 15px */
 
@@ -1766,7 +1771,7 @@ input[type="color"],
 .uneditable-input {
   border: 2px solid #bdc3c7;
   color: #2e2d33;
-  font-family: "Lato", sans-serif;
+  font-family: 'Whitney SSm A', 'Whitney SSm B', sans-serif;
   font-size: 14px;
   padding: 8px 5px;
   height: 21px;
@@ -3173,7 +3178,7 @@ input.search-query {
   background: transparent;
   border: none;
   color: #2e2d33;
-  font-family: "Lato", sans-serif;
+  font-family: 'Whitney SSm A', 'Whitney SSm B', sans-serif;
   font-size: 14px;
   margin: 0px;
   padding: 0 0 0 5px;
@@ -3369,7 +3374,7 @@ input.search-query {
 .spinner {
   width: 43px;
   border-right-width: 0 !important;
-  font-weight: bold;
+  font-weight: 600;
   font-size: 20px !important;
 }
 .ui-spinner {
@@ -3573,7 +3578,7 @@ input.search-query {
   min-width: 34px;
   height: 30px;
   text-align: center;
-  font-weight: bold;
+  font-weight: 600;
   border: 0;
   padding: 1px;
   vertical-align: middle;
@@ -4823,7 +4828,7 @@ input.search-query {
 }
 .alert a {
   color: #f1c40f;
-  font-weight: bold;
+  font-weight: 600;
 }
 .alert a:hover {
   text-decoration: underline;
@@ -5492,7 +5497,7 @@ input.search-query {
   background-color: #2a7aaf;
   border-radius: 50%;
   color: #ffffff;
-  font-family: "Lato", sans-serif;
+  font-family: 'Whitney SSm A', 'Whitney SSm B', sans-serif;
   font-size: 11.998px;
   font-weight: 500;
   line-height: 18.998px;
