--- a/wordpress/wp-content/themes/thulme/assets/less/flat-ui/modules/ui-spinner.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/flat-ui/modules/ui-spinner.less
@@ -5,7 +5,7 @@
 .spinner {
   width: 43px;
   border-right-width: 0 !important;
-  font-weight: bold;
+  font-weight: 600;
   font-size: 20px !important;
 }
 
@@ -92,7 +92,7 @@
   // Icon
   span {
     font-size: 0;
-    
+
     &:before {
       content: "\e001";
       font-family: "Flat-UI-Icons";
@@ -110,7 +110,7 @@
   bottom: 0;
   height: 20px;
   .border-radius(0 0 6px 0);
-  
+
   span:before {
     content: "\e005";
   }
