removed the footer

--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -27,8 +27,7 @@ body {
   }
 }
 .banner,
-.document,
-.content-info {
+.document {
   .column(24);
 }
 @media (min-width: @tabletBreakpoint) {
@@ -39,11 +38,6 @@ body {
   .document {
     .column(16);
     .push(2);
-    .pull(1);
-  }
-  .content-info {
-    .column(16);
-    .push(7);
     .pull(1);
   }
 }
