--- a/wordpress/wp-content/themes/thulme/assets/less/partials/document.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/document.less
@@ -12,6 +12,8 @@
   }
 
   .page-header {
+    margin-top: (4 * @base-font-size * @base-line-height);
+
     body.category-weiji & {
       color: @weiji;
 
