--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -112,6 +112,7 @@ body {
   }
   & > li a {
     border-bottom: 2px solid transparent;
+    border-top: 2px solid transparent;
     .border-radius(0);
   }
   // About (thulme)
@@ -121,6 +122,7 @@ body {
 
       &:hover,
       &:focus {
+        border-top-color: @thulme;
         background-color: @thulme;
         color: black;
       }
@@ -144,6 +146,7 @@ body {
 
       &:hover,
       &:focus {
+        border-top-color: @weiji;
         background-color: @weiji;
         color: white;
       }
@@ -167,6 +170,7 @@ body {
 
       &:hover,
       &:focus {
+        border-top-color: @startup-tools;
         background-color: @startup-tools;
         color: @deep-sea;
       }
@@ -190,6 +194,7 @@ body {
 
       &:hover,
       &:focus {
+        border-top-color: @open-design;
         background-color: @open-design;
         color: @deep-sea;
       }
