logo is inline-block

--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -58,7 +58,8 @@ body {
 
   // Title
   .title {
-    display: block;
+    display: inline-block;
+
     font-family: @alt-font-family;
     font-weight: @alt-font-weight;
     font-size: @h3;
