--- a/wordpress/wp-content/themes/thulme/style.css
+++ b/wordpress/wp-content/themes/thulme/style.css
@@ -7706,8 +7706,10 @@ body.archive .document .hentry header h2 {
 .document {
   display: inline;
   float: left;
-  width: 98.95833333333334%;
+  width: 90.625%;
   margin: 0 0.5208333333333333%;
+  margin-left: 4.687499999999999%;
+  margin-right: 4.687499999999999%;
 }
 @media (min-width: 979px) {
   .banner {
@@ -7733,7 +7735,7 @@ body {
  */
 @media (min-width: 979px) {
   .banner {
-    margin-top: 68.936px;
+    margin-top: 51.702000000000005px;
   }
 }
 .banner .title {
@@ -7787,7 +7789,9 @@ body {
   text-transform: uppercase;
 }
 .banner #nav-toggle {
-  margin-bottom: 17.234px;
+  position: absolute;
+  top: 17.234px;
+  right: 17.234px;
 }
 @media (min-width: 979px) {
   .banner #nav-toggle {
@@ -7802,6 +7806,7 @@ body {
 }
 .banner .title,
 .banner .description {
+  margin-top: 17.234px;
   margin-bottom: 17.234px;
 }
 @media (min-width: 979px) {
