--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -19,11 +19,14 @@
 
 // Theme partials
 @import "partials/document";
+@import "partials/home";
 
 // Basic responsive grid
 body {
   @media (min-width: @tabletBreakpoint) {
     max-width: (@tabletBreakpoint * 1.5);
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 .banner,
@@ -36,10 +39,12 @@ body {
   .banner {
     .column(5);
     .push(1);
+    margin-top: (3 * @base-font-size * @base-line-height);
   }
   .document {
-    .column(12);
+    .column(13);
     .push(1);
+    margin-top: (3 * @base-font-size * @base-line-height);
   }
 }
 
@@ -52,11 +57,6 @@ body {
  * Header (banner)
  */
 .banner {
-
-  // Push down on big screens
-  @media (min-width: @tabletBreakpoint) {
-    margin-top: (3 * @base-font-size * @base-line-height);
-  }
 
   // Title
   .title {
@@ -137,7 +137,7 @@ body {
   #nav-toggle {
     position: absolute;
     top: (@base-font-size * @base-line-height);
-    right: (@base-font-size * @base-line-height);
+    right: 4.687499999999999%; // Equivalent to .pull(1)
 
     @media (min-width: @tabletBreakpoint) {
       display: none;
