--- a/wordpress/wp-content/themes/thulme/style.css
+++ b/wordpress/wp-content/themes/thulme/style.css
@@ -7904,94 +7904,26 @@ body {
 }
 .nav-list > li a {
   border-bottom: 2px solid transparent;
-  border-top: 2px solid transparent;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
 }
+.nav-list > li a:hover,
+.nav-list > li a:focus {
+  background-color: transparent;
+  color: white;
+}
 .nav-list > li[class*='about'] a {
   border-bottom-color: #40e2e1;
-}
-.nav-list > li[class*='about'] a:hover,
-.nav-list > li[class*='about'] a:focus {
-  border-top-color: #40e2e1;
-  background-color: #40e2e1;
-  color: black;
-}
-.nav-list > li[class*='about'].active a,
-.nav-list > li[class*='about'].active a,
-.nav-list > li[class*='about'].active a,
-.nav-list > li[class*='about'].active a:hover,
-.nav-list > li[class*='about'].active a:hover,
-.nav-list > li[class*='about'].active a:hover,
-.nav-list > li[class*='about'].active a:focus,
-.nav-list > li[class*='about'].active a:focus,
-.nav-list > li[class*='about'].active a:focus {
-  background-color: #40e2e1;
-  color: black;
 }
 .nav-list > li[class*='weiji'] a {
   border-bottom-color: #d13351;
 }
-.nav-list > li[class*='weiji'] a:hover,
-.nav-list > li[class*='weiji'] a:focus {
-  border-top-color: #d13351;
-  background-color: #d13351;
-  color: white;
-}
-.nav-list > li[class*='weiji'].active a,
-.nav-list > li[class*='weiji'].active a,
-.nav-list > li[class*='weiji'].active a,
-.nav-list > li[class*='weiji'].active a:hover,
-.nav-list > li[class*='weiji'].active a:hover,
-.nav-list > li[class*='weiji'].active a:hover,
-.nav-list > li[class*='weiji'].active a:focus,
-.nav-list > li[class*='weiji'].active a:focus,
-.nav-list > li[class*='weiji'].active a:focus {
-  background-color: #d13351;
-  color: white;
-}
 .nav-list > li[class*='startup-tools'] a {
   border-bottom-color: #90cc3a;
 }
-.nav-list > li[class*='startup-tools'] a:hover,
-.nav-list > li[class*='startup-tools'] a:focus {
-  border-top-color: #90cc3a;
-  background-color: #90cc3a;
-  color: #2e2d33;
-}
-.nav-list > li[class*='startup-tools'].active a,
-.nav-list > li[class*='startup-tools'].active a,
-.nav-list > li[class*='startup-tools'].active a,
-.nav-list > li[class*='startup-tools'].active a:hover,
-.nav-list > li[class*='startup-tools'].active a:hover,
-.nav-list > li[class*='startup-tools'].active a:hover,
-.nav-list > li[class*='startup-tools'].active a:focus,
-.nav-list > li[class*='startup-tools'].active a:focus,
-.nav-list > li[class*='startup-tools'].active a:focus {
-  background-color: #90cc3a;
-  color: #2e2d33;
-}
 .nav-list > li[class*='open-design'] a {
   border-bottom-color: #ebc434;
-}
-.nav-list > li[class*='open-design'] a:hover,
-.nav-list > li[class*='open-design'] a:focus {
-  border-top-color: #ebc434;
-  background-color: #ebc434;
-  color: #2e2d33;
-}
-.nav-list > li[class*='open-design'].active a,
-.nav-list > li[class*='open-design'].active a,
-.nav-list > li[class*='open-design'].active a,
-.nav-list > li[class*='open-design'].active a:hover,
-.nav-list > li[class*='open-design'].active a:hover,
-.nav-list > li[class*='open-design'].active a:hover,
-.nav-list > li[class*='open-design'].active a:focus,
-.nav-list > li[class*='open-design'].active a:focus,
-.nav-list > li[class*='open-design'].active a:focus {
-  background-color: #ebc434;
-  color: #2e2d33;
 }
 /*
  * Footer (content info)
