css design notice

--- a/wordpress/wp-content/themes/thulme/style.css
+++ b/wordpress/wp-content/themes/thulme/style.css
@@ -3,6 +3,7 @@
   Theme Name:     Tom Hulme's theme
   Author:         Fredrik Broman
   Author URI:     http://synack.se/
+  Design:         Tom Hulme, Roberto Picerno, Fredrik Broman
   Template:       roots
   Version:        0.1.0
 */
