--- a/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/flat-ui/config.less
@@ -62,7 +62,7 @@
 @info:             @peter-river;
 
 @link-color:       black;
-@link-hover-color: @deep-sea;
+@link-hover-color: @midnight-blue;
 
 // Typography
 // -------------------------
