--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -54,6 +54,12 @@ body {
   background-color: @stockholm;
 }
 
+// Link highlighting
+a:hover,
+a:focus {
+  text-decoration: underline;
+}
+
 /*
  * Header (banner)
  */
